--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,7 +1,7 @@
 const path = require("path");
 
 module.exports = {
-	"config": path.resolve("src", "database", "index.js"),
+	"config": path.resolve("src", "database", "sequelize.js"),
 	"models-path": path.resolve("src", "database", "models"),
 	"seeders-path": path.resolve("src", "database", "seeders"),
 	"migrations-path": path.resolve("src", "database", "migrations")
