--- a/package.json
+++ b/package.json
@@ -1,27 +1,38 @@
 {
-  "name": "today-api.stuysu.org",
-  "version": "1.0.0",
-  "description": "API for today.stuysu.org",
-  "main": "src/index.js",
-  "scripts": {
-    "dev": "nodemon --require esm src/index.js",
-    "migrate": "node --require esm node_modules/.bin/sequelize-cli db:migrate",
-    "seedSchedules": "node --require esm src/defaultSchedules.js"
-  },
-  "dependencies": {
-    "apollo-server-core": "^3.5.0",
-    "apollo-server-express": "^3.5.0",
-    "esm": "^3.2.25",
-    "express": "^4.17.2",
-    "graphql": "^15.8.0",
-    "graphql-scalars": "^1.14.1",
-    "graphql-validation-complexity": "^0.4.2",
-    "mysql2": "^2.3.3",
-    "sequelize": "^6.12.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.15",
-    "sequelize-cli": "^6.3.0",
-    "sqlite3": "^5.0.2"
-  }
+	"name": "today-api.stuysu.org",
+	"version": "1.0.0",
+	"description": "API for today.stuysu.org",
+	"main": "src/index.js",
+	"scripts": {
+		"start": "node --require esm src/index.js",
+		"dev": "nodemon --require esm src/index.js",
+		"migrate": "node --require esm node_modules/.bin/sequelize-cli db:migrate",
+		"seedSchedules": "node --require esm src/defaultSchedules.js"
+	},
+	"dependencies": {
+		"apollo-server-core": "^3.5.0",
+		"apollo-server-express": "^3.5.0",
+		"esm": "^3.2.25",
+		"express": "^4.17.2",
+		"graphql": "^15.8.0",
+		"graphql-scalars": "^1.14.1",
+		"graphql-validation-complexity": "^0.4.2",
+		"mysql2": "^2.3.3",
+		"sequelize": "^6.12.0"
+	},
+	"devDependencies": {
+		"nodemon": "^2.0.15",
+		"sequelize-cli": "^6.3.0",
+		"sqlite3": "^5.0.2"
+	},
+	"prettier": {
+		"useTabs": true,
+		"tabWidth": 4,
+		"arrowParens": "avoid",
+		"trailingComma": "none",
+		"semi": true,
+		"singleQuote": true,
+		"printWidth": 80,
+		"endOfLine": "lf"
+	}
 }
