--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
 	"dependencies": {
 		"apollo-server-core": "^3.5.0",
 		"apollo-server-express": "^3.5.0",
+		"connect-session-sequelize": "^7.1.2",
 		"esm": "^3.2.25",
 		"express": "^4.17.2",
+		"express-session": "^1.17.2",
+		"google-auth-library": "^7.11.0",
 		"graphql": "^15.8.0",
 		"graphql-scalars": "^1.14.1",
 		"graphql-validation-complexity": "^0.4.2",
 		"mysql2": "^2.3.3",
-		"sequelize-cli": "^6.3.0",
-		"sequelize": "^6.12.0"
+		"sequelize": "^6.12.0",
+		"sequelize-cli": "^6.3.0"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.15",
